overflow issue fixed

--- a/System.css
+++ b/System.css
@@ -3,7 +3,7 @@ body{
     font-family: 'Franklin Gothic Medium';
 }
 #top{
-    width: 100vw;
+    width: 100%;
     height: 4rem;
     background-color: white;
     color: white;
